# cpp_typingtrainer

./: GrammaticalStructure.cpp  README.md  SampleReader  SampleReader.cpp  TODO.txt  TempTest  TempTest.cpp  TrainingTextGenerator.cpp  TypingStats.cpp  TypingTrainer  TypingTrainer.cpp  User.cpp  beginner.txt  object_advanced.txt  object_beginner.txt  object_intermediate.txt  performance.md  statistics.txt  structure.md  subject_advanced.txt  subject_intermediate.txt  users.txt  utils.cpp  verb_advanced.txt  verb_beginner.txt  verb_intermediate.txt
res/: text_json.json
res/sample_texts/: object_advanced.txt  object_beginner.txt  subject_advanced.txt  subject_beginner.txt  verb_intermediate.txt
res/user_data/: users.json
sample_texts/: object_intermediate.txt  subject_intermediate.txt  verb_advanced.txt  verb_beginner.txt
src/: CMakeLists.txt  TrainingTextGenerator  TrainingTextGenerator.cpp  TrainingTextGenerator.h  TypingStatsRecorder.cpp  TypingStatsRecorder.h  TypingStatsTest.cpp  TypingStatsV2.cpp  TypingStatsV2.h  TypingTrainerSession.cpp  TypingTrainerSession.h  TypingTrainerUI.cpp  TypingTrainerUI.h  User  User.cpp  User.h  main  main.cpp  utils.cpp  utils.h
